--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,6 +31,7 @@
     border-style: none;
     border-radius: 10px;
     padding:10px;
+    min-width: 225px;
 }
 body {
   background-color: #8ea0e1; /* Light background color */
@@ -92,6 +93,6 @@ span{
 .title{
     border-radius: 10px;
     padding: 2px;
-    max-width: 600px;
+    width: 245px;
     background-color: #8ea0e1;
 }
