Added Weapons page functionality

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,7 +92,17 @@ span{
 
 .title{
     border-radius: 10px;
-    padding: 2px;
+    text-align: center;
     width: 245px;
     background-color: #8ea0e1;
+}
+select{
+  height:40px;
+  font-weight: bold;
+}
+h2{
+  font-size: 26px;
+}
+option{
+  font-weight: bold;
 }
