--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,20 +70,23 @@ input{
 button{
   background-color: #7289da;
   min-width: 100px;
-  margin-left:10px;
-  margin-right:10px;
   min-height: 50px;
   max-height: 50px;
-  margin-top:15px;
   border-radius:10px;
   font-weight: bold;
   font-size:16px;
+}
+.navButtons{
+  margin-left:10px;
+  margin-right:10px;
+  margin-top:15px;
 }
 button:hover{
     background-color: #9cace5;
 }
 span{
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 #logo{
     margin-left: 15px;
@@ -105,4 +108,16 @@ h2{
 }
 option{
   font-weight: bold;
+}
+
+.matsImg{
+  max-width:150px;
+  max-height:150px;
+  min-width:150px;
+  min-height:150px;
+}
+.recipeImg{
+  min-width:200px;
+  min-height:200px;
+  margin-bottom:20px;
 }
